--- a/templates/ts-shopify/package.json
+++ b/templates/ts-shopify/package.json
@@ -7,11 +7,11 @@
     "lint": "tslint --project tsconfig.json --type-check"
   },
   "dependencies": {
-    "ts-node": "^3.0.2",
-    "tslint": "4.5.x",
-    "typescript": "^2.2.2"
   },
   "devDependencies": {
+    "ts-node": "^3.0.2",
+    "tslint": "4.5.x",
+    "typescript": "2.3.1",
     "tslint-config-shopify": "^1.5.0"
   },
   "author": "",
