--- a/exercises/answers/ng-users/package.json
+++ b/exercises/answers/ng-users/package.json
@@ -38,6 +38,6 @@
     "codelyzer": "~2.0.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "~2.2.0"
+    "typescript": "2.2.x"
   }
 }
