--- a/templates/ng-app/package.json
+++ b/templates/ng-app/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "cors": "^2.8.3",
     "express": "^4.15.2",
     "faker": "^4.1.0",
     "morgan": "^1.8.1",
